add projects validations
